2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mgwport-0.10.6-1.

	* mingw32/mingw32-mgwport.xml: Add 0.10.6-1 release.
	* mingw32/issue.log: Update accordingly.


2011-11-06  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.4-alpha-1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adopt mingw32-libunistring as a contributed package;
	relegate mingw32-pdcurses to contributed status.

	* mingw32/mingw32-package-list.xml: Add mingw32-libunistring.xml hook;
	relocate mingw32-pdcurses.xml reference to contributed package group.

	* mingw32/mingw32-pdcurses.xml: Remove file.

	* mingw32/issue.log: Update accordingly.

2011-10-31  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update and publish msys-gettext, msys-libiconv.
	Correct versioning issue with mingw32-{gettext,libiconv}.

	* msys/msys-gettext.xml: Update to 0.18.1.1-1.
	* msys/msys-libiconv.xml: Update to 1.14-1.
	* msys/issue.log: Updated accordingly.
	* mingw32/mingw32-gettext.xml: Version 0.18.1.1-2 requires
	at least version 1.14-2 of mingw32-libiconv-dll-2.
	* mingw32/mingw32-libiconv.xml: VErsion 1.14-2 requires at
	least version 0.18.1.1-2 of mingw32-libintl-dll-8.
	* mingw32/issue.log: Updated accordingly.

2011-10-24  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-autoconf.

	* msys/msys-autoconf.xml: Update to 2.68-1.
	* msys/issue.log: Updated accordingly.

2011-10-22  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-libiconv, mingw32-gettext.

	* mingw32/mingw32-libiconv.xml: Update to 1.14-2.
	* mingw32/mingw32-gettext.xml: Update to 0.18.1.1-2.
	* mingw32/issue.log: Updated accordingly.

2011-10-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.3.1-1.
	* mingw32/issue.log: Updated accordingly.
