@@ -88,7 +88,7 @@
   3a53adee6e7f3de0eec8150cffe20ffc570bd0ef 2011101100 msys-vim.xml
   9f12fffede2f0a8b48e18a0f3cbc269344667f45 2010090600 msys-w32api.xml
   fe8fd3bf13c92bc9792636e7f9d07b38a574368f 2011101100 msys-wget.xml
-  51d1df6286ba0e94be02a42823fc4ef1a9c24587 2011101100 msys-xz.xml
+  21bd073bc49a2d941f1a78a4f1e998b997b1a126 2011110700 msys-xz.xml
   352e88a18d2369c4955a52740920c50639b43baf 2011101100 msys-zip.xml
   94b099c93c13b9aef6b0a01218605f9f6e6b5dbc 2011101400 msys-zlib.xml
 #
