@@ -42,6 +42,10 @@
           <requires eq="msys-libintl-*-msys-*-dll-8.tar" />
           <requires eq="msys-liblzma-%-msys-%-dll-1.tar" />
         </release>
+        <release tarname="xz-5.0.3-1-msys-1.0.17-bin.tar.lzma">
+          <requires eq="msys-libintl-*-msys-*-dll-8.tar" />
+          <requires eq="msys-liblzma-%-msys-%-dll-5.tar" />
+        </release>
 
         <!-- Other requirements support the auxiliary scripts, which are
           provided by the xz-bin package.
@@ -55,10 +59,16 @@
 
       <component class="doc">
         <release tarname="xz-4.999.9beta_20100401-1-msys-1.0.13-doc.tar.gz" />
+        <release tarname="xz-5.0.3-1-msys-1.0.17-doc.tar.lzma" />
+      </component>
+
+      <component class="lang">
+        <release tarname="xz-5.0.3-1-msys-1.0.17-lang.tar.lzma" />
       </component>
 
       <component class="lic">
         <release tarname="xz-4.999.9beta_20100401-1-msys-1.0.13-lic.tar.gz" />
+        <release tarname="xz-5.0.3-1-msys-1.0.17-lic.tar.lzma" />
       </component>
     </package>
 
@@ -89,6 +99,7 @@
 
       <component class="dll">
         <release tarname="liblzma-4.999.9beta_20100401-1-msys-1.0.13-dll-1.tar.gz" />
+        <release tarname="liblzma-5.0.3-1-msys-1.0.17-dll-5.tar.lzma" />
 
         <!-- Every MSYS DLL package requires msys-core-bin -->
         <requires eq="msys-core-*-msys-*-bin.tar" />
@@ -97,6 +108,9 @@
       <component class="dev">
         <release tarname="liblzma-4.999.9beta_20100401-1-msys-1.0.13-dev.tar.gz">
           <requires eq="msys-liblzma-%-msys-%-dll-1.tar" />
+        </release>
+        <release tarname="liblzma-5.0.3-1-msys-1.0.17-dev.tar.lzma">
+          <requires eq="msys-liblzma-%-msys-%-dll-5.tar" />
         </release>
       </component>
     </package>
