@@ -1,5 +1,12 @@
 2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>
 
+	Update & publish msys-xz.
+
+	* msys/msys-xz.xml: Update to xz-5.0.3-1.
+	* msys/issue.log: Update accordingly.
+
+2011-11-06  Charles Wilson  <mingw@cwilson.fastmail.fm>
+
 	Update & publish mgwport-0.10.6-1.
 
 	* mingw32/mingw32-mgwport.xml: Add 0.10.6-1 release.
